--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>CHWIGGY</title>
   </head>
   <body>
-    <h1>Welcome to CHWIGGY</h1>
+    <div id="root"></div>
+
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
 
     <script src="App.js"></script>
   </body>
